# info2-sendmail

./: Config.hs  Info2SendMail.hs  Misc.hs  README.md  example  info2-sendmail.cabal
